styled the contact page and FIXED BUG alignment; on the classes page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -115,6 +115,7 @@ body {
     margin-left: 20px;
     margin-right: 20px;
     margin-top: 20px;
+    margin-bottom: 20px;
 }
 .contact-container {
     padding-top: 0;
